<resources>
    <string name="app_name">NewMed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_patient">Добавить вызов</string>
    <string name="btn_all_patient">Все пациенты</string>
    <string name="btn_medications">Препараты</string>
    <string name="btn_money">Заработок</string>
    <string name="btn_schedule">График работы</string>
    <string name="name_call">Вызывает</string>
    <string name="name_patient">Имя пациента</string>
    <string name="name">имя пациента:</string>
    <string name="man">М</string>
    <string name="woman">Ж</string>\
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="age_patient">Возраст</string>
    <string name="address_patient">Адрес</string>
    <string name="number_patient">Моб. номер</string>
    <string name="money">BYN</string>
    <string name="alcohol">Синдром отмены от алкоголя</string>
    <string name="sex">пол:</string>
    <string name="diseases">Сопутствующие заболевания:</string>
    <string name="btn_add_medicamentatons">Пополнить</string>
    <string name="cmt">Черепно-мозговая травма</string>
    <string name="sd">Сахарный диабет</string>
    <string name="ag">Артериальная гипертензия</string>
    <string name="ibs">Ишемическая болезнь сердца</string>
    <string name="aritm">Нарушение ритма</string>
    <string name="bp">Повышенная масса тела</string>
    <string name="cp">Цирроз печени</string>
    <string name="inf_patient">Информация о пациенте</string>
    <string name="inf">Информация о лечении</string>
    <string name="number_call">моб.тел.:</string>
    <string name="diagnosis">диагноз:</string>
    <string name="diagnosis_case">сопутствующие заболевания:</string>
    <string name="inf_treatment">Информация о лечении:</string>
    <string name="ad">а/д:</string>
    <string name="pulse">пульс:</string>
    <string name="appwidget_text">Имя</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="update_info">Информация обновлена</string>
    <string name="add_patient">Вызов добавлен</string>
    <string name="magnia">р-р Магния сульфата 25% 5мл.</string>
    <string name="ringera">р-р Рингера 250мл.</string>
    <string name="galoperidol">р-р Галоперидол 0,5% 1мл.</string>
    <string name="dimedrol">р-р Димедрол 1% 1мл.</string>
    <string name="fenibut">р-р Фенибута 10мг/мл 100мл.</string>
    <string name="tiamin">р-р Тиамина хлорид 5% 1мл.</string>
    <string name="unitiol">р-р Унитиол 5% 5мл.</string>
    <string name="sonnat">таб. Соннат 7,5мг.</string>
    <string name="karbazipin">таб. Карбазипин 200мг.</string>
    <string name="normogidron">пор. Нормогидрон</string>
    <string name="anaprilin">таб. Анаприлин 10мг.</string>
    <string name="login">Логин</string>
    <string name="fail_login">Неверный логин</string>
    <string name="fail_password">Неверный пароль</string>
    <string name="password">Пароль</string>
    <string name="btnLogin">войти</string>
    <string name="shake">ПОТРЯСИ ТЕЛЕФОН - УБЕЙ ВИРУС</string>
    <string name="drugs">Синдром отмены от наркотических средств</string>
    <string name="active">Актив</string>
    <string name="clearSpisok">Очистить</string>
    <string name="day">день</string>
    <string name="night">ночь</string>
    <string name="infVyz">Информация о вызове</string>
    <string name="distance">Расстояние</string>
    <string name="hour">Часы</string>
    <string name="min">Минуты</string>
    <string name="sum">Сумма:</string>
</resources>