<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvData"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="data"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNameCall"
        android:layout_width="108dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/name_call"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvData"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvNumberCall"
        android:layout_width="144dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/number_patient"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/tvNameCall"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/address_patient"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameCall"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="96dp" />

</androidx.constraintlayout.widget.ConstraintLayout>