<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".fragments.InfoPatientFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textP"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/inf_patient"
                    android:textColor="@color/grey"
                    android:textSize="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_menu"
                android:backgroundTint="@color/white"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line3"
                tools:ignore="MissingConstraints"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textNP"
                    android:layout_width="49dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/name_patient"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/namePatient"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/textNP"
                    android:gravity="center"
                    android:text="Константин"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textNC"
                    android:layout_width="49dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/textNP"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/number_call"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/numberPatient"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_below="@+id/namePatient"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:layout_toEndOf="@+id/textNP"
                    android:gravity="center"
                    android:text="+375336477142"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAgePatient"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@+id/namePatient"
                    android:gravity="center"
                    android:text="45"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/namePatient"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textD"
                    android:layout_width="49dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/textNC"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/diagnosis"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tvDiagnosis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/numberPatient"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@+id/textD"
                    android:gravity="center"
                    android:text="Алкогольная интоксикация"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textZ"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_below="@+id/textD"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/diagnosis_case"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbOne"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/textZ"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cmt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/cbOne"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/sd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbThree"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/cbTwo"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/ag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbFour"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/cbThree"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/ibs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbFive"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/cbFour"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/aritm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbSix"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/cbFive"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/bp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/cbSix"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/cp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                tools:ignore="MissingConstraints"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textI"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/inf_treatment"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="0dp"
                    android:src="@drawable/ic_edit" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/line4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_menu"
                android:backgroundTint="@color/white"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line4"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/textAd"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/ad"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/etAd"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/textAd"
                    android:gravity="left"
                    android:text="180/120"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textPulse"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/etAd"
                    android:gravity="center"
                    android:text="@string/pulse"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/etPulse"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/textPulse"
                    android:gravity="left"
                    android:text="120"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/remedyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/etAd"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/style_menu"
                    android:backgroundTint="@color/white"
                    android:divider="@color/black"
                    android:dividerHeight="1px"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:itemCount="100"
                    tools:listitem="@layout/item_remedy_patient" />


            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>